Lower z-index for main nav/tabs – preliminary to avoid issues with the half official tinymce4 plugin in full screen mode - otherwise tabs are above it! I saw no issues with the change but If there are let me know or just revert.

--- a/zp-core/admin.css
+++ b/zp-core/admin.css
@@ -184,7 +184,7 @@ ul.nav ul {
 
 ul.nav {
 	position: relative;
-	z-index: 597;
+	z-index: 100;
 	float: left;
 	padding: 0;
 	_padding: 0 0 0 30px;
